--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       font-size: 16px;
     }
 
-    #startBtn {
+    .main-btn {
       margin-top: 30px;
       padding: 14px 24px;
       font-weight: bold;
@@ -48,7 +48,7 @@
       cursor: pointer;
     }
 
-    #startBtn:hover {
+    .main-btn:hover {
       background-color: #cc3c3c;
     }
 
@@ -119,7 +119,7 @@
     <div id="landing" class="centered">
       <h1>Welcome to MV Digital Tools</h1>
       <p>Are you ready to save up to 90% on Subscription services?</p>
-      <button id="startBtn">Yes</button>
+      <button id="startBtn" class="main-btn">Yes</button>
     </div>
 
     <div id="howItWorks" class="centered" style="display:none;">
@@ -128,7 +128,7 @@
       <p>💳 Get instant payment instructions</p>
       <p>⚙️ Activation within 1-2 hours</p>
       <p>📞 Need help? Contact us at 7566658</p>
-      <button id="formBtn">Continue</button>
+      <button id="formBtn" class="main-btn">Continue</button>
     </div>
 
     <div class="card" id="formCard">
@@ -176,7 +176,7 @@
           <span>MVR 0 ($0.00)</span>
         </div>
 
-        <button type="submit">Submit</button>
+        <button type="submit" class="main-btn">Submit</button>
       </form>
     </div>
   </div>
