--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
+
 <!DOCTYPE html>
 <html>
 <head>
   <base target="_top">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MV Digital Tools - Subscription</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -12,27 +12,33 @@
       margin: 0;
       padding: 0;
     }
+
     .container {
       max-width: 500px;
       margin: 0 auto;
       padding: 20px;
     }
+
     .centered {
       text-align: center;
       padding: 60px 20px 30px;
       animation: fadeIn 1s ease;
     }
+
     .centered h1 {
       font-size: 2em;
       margin-bottom: 20px;
     }
+
     .centered p {
       font-size: 1.2em;
     }
+
     button, select, input, textarea {
       font-size: 16px;
     }
-    .red-btn {
+
+    #startBtn, #formBtn, #customerForm button {
       margin-top: 30px;
       padding: 14px 24px;
       font-weight: bold;
@@ -42,9 +48,11 @@
       color: white;
       cursor: pointer;
     }
-    .red-btn:hover {
+
+    #startBtn:hover, #formBtn:hover, #customerForm button:hover {
       background-color: #cc3c3c;
     }
+
     .card {
       background: #fff;
       color: #333;
@@ -55,15 +63,18 @@
       display: none;
       animation: fadeIn 0.5s ease-in-out;
     }
+
     .card h2 {
       text-align: center;
       color: #0d1a26;
     }
+
     label {
       font-weight: 600;
       margin-top: 12px;
       display: block;
     }
+
     input, select, textarea {
       width: 100%;
       padding: 10px;
@@ -73,6 +84,7 @@
       margin-bottom: 15px;
       box-sizing: border-box;
     }
+
     .sticky-price {
       background-color: #0d1a26;
       color: white;
@@ -85,15 +97,18 @@
       bottom: 0;
       z-index: 999;
     }
+
     .sticky-price span {
       font-size: 26px;
       display: block;
       margin-top: 5px;
     }
+
     .perk-section {
       font-size: 0.95em;
       margin: 15px 0;
     }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
@@ -105,181 +120,72 @@
     <div id="landing" class="centered">
       <h1>Welcome to MV Digital Tools</h1>
       <p>Are you ready to save up to 90% on Subscription services?</p>
-      <button class="red-btn" id="startBtn">Yes, show me how</button>
+      <button id="startBtn">Yes, show me how</button>
     </div>
+
     <div id="howItWorks" class="centered" style="display:none;">
       <h1>Here's how it works</h1>
       <p>✅ Select your service and duration</p>
       <p>💳 Get instant payment instructions</p>
       <p>⚙️ Activation within 1–2 hours</p>
       <p>📞 Need help? Contact us at 7566658</p>
-      <button class="red-btn" id="formBtn">Continue</button>
+      <button id="formBtn">Continue</button>
     </div>
+
     <div class="card" id="formCard">
       <h2>Subscription Request</h2>
       <p style="text-align:center;">Fill the form to subscribe. Payment instructions will be sent instantly.</p>
       <form id="customerForm">
         <label>Full Name</label>
         <input type="text" name="name" required>
+
         <label>Contact Number</label>
         <input type="tel" name="contact" required>
+
         <label>Email Address</label>
         <input type="email" name="email" required>
+
         <label>Request Type</label>
         <select name="requestType" required>
           <option value="new">New Subscription</option>
           <option value="renew">Renew Existing</option>
         </select>
+
         <label>Service</label>
         <select name="service" id="service" required>
           <option value="ChatGPT">ChatGPT Pro</option>
           <option value="Microsoft 365">Microsoft 365</option>
-          <option value="Canva Pro">Canva Pro</option>
-          <option value="Duolingo">Duolingo</option>
-          <option value="Assignment Check">Assignment Check</option>
-          <option value="Perplexity">Perplexity Pro</option>
-          <option value="Amazon Prime Video">Amazon Prime Video</option>
-          <option value="Adobe Creative Cloud">Adobe Creative Cloud</option>
         </select>
+
         <label>Duration</label>
-        <select name="duration" id="duration" required></select>
-        <div class="perk-section" id="perkDisplay"></div>
+        <select name="duration" id="duration" required>
+          <option value="1 Month">1 Month</option>
+        </select>
+
+        <div class="perk-section" id="perkDisplay">What do you get:</div>
+
         <label>Notes / Ref</label>
         <textarea name="notes" rows="3" placeholder="Optional..."></textarea>
-        <div class="sticky-price" id="priceDisplay">🛒 Total Price <span>MVR 0 ($0.00)</span></div>
-        <button type="submit" class="red-btn">Submit</button>
+
+        <div class="sticky-price" id="priceDisplay">
+          🛒 Total Price
+          <span>MVR 0 ($0.00)</span>
+        </div>
+
+        <button type="submit">Submit</button>
       </form>
     </div>
   </div>
+
   <script>
-    const priceMap = {
-      "ChatGPT": { "1 Month": 100, "6 Months": 600, "1 Year": 1200 },
-      "Microsoft 365": { "1 Year": 500 },
-      "Canva Pro": { "1 Year": 150 },
-      "Duolingo": { "1 Year": 150 },
-      "Assignment Check": { "1 Assignment": 150, "1 Month Unlimited": 500 },
-      "Perplexity": { "1 Year": 200 },
-      "Amazon Prime Video": { "1 Year": 999 },
-      "Adobe Creative Cloud": { "1 Month": 450 }
-    };
-    const durationOptions = {
-      "ChatGPT": ["1 Month", "6 Months", "1 Year"],
-      "Microsoft 365": ["1 Year"],
-      "Canva Pro": ["1 Year"],
-      "Duolingo": ["1 Year"],
-      "Assignment Check": ["1 Assignment", "1 Month Unlimited"],
-      "Perplexity": ["1 Year"],
-      "Amazon Prime Video": ["1 Year"],
-      "Adobe Creative Cloud": ["1 Month"]
-    };
-    const perksMap = {
-      "ChatGPT": [
-        "Priority access to GPT-4",
-        "Faster response times",
-        "Improved performance during peak hours"
-      ],
-      "Microsoft 365": [
-        "Access to Word, Excel, PowerPoint",
-        "1TB OneDrive Cloud Storage",
-        "Install on 5 devices"
-      ],
-      "Canva Pro": [
-        "Unlimited premium templates & elements",
-        "Magic Resize, Background Remover",
-        "Brand Kit and content planner"
-      ],
-      "Duolingo": [
-        "Ad-free experience",
-        "Unlimited hearts (mistakes)",
-        "Offline access"
-      ],
-      "Assignment Check": [
-        "AI detection report (Turnitin, GPTZero, etc.)",
-        "No repository saving",
-        "Fast 1–2 hr report"
-      ],
-      "Perplexity": [
-        "Faster and accurate answers",
-        "Cited responses",
-        "No usage limits"
-      ],
-      "Amazon Prime Video": [
-        "Exclusive Prime Originals",
-        "Offline downloads",
-        "Watch on multiple devices"
-      ],
-      "Adobe Creative Cloud": [
-        "Access to Photoshop, Illustrator & more",
-        "100GB Cloud storage",
-        "Creative asset library"
-      ]
-    };
-    const serviceEl = document.getElementById("service");
-    const durationEl = document.getElementById("duration");
-    const priceDisplay = document.getElementById("priceDisplay").querySelector("span");
-    const perkDisplay = document.getElementById("perkDisplay");
-    function updateDurationOptions() {
-      const service = serviceEl.value;
-      durationEl.innerHTML = "";
-      (durationOptions[service] || []).forEach(opt => {
-        const o = document.createElement("option");
-        o.value = opt;
-        o.textContent = opt;
-        durationEl.appendChild(o);
-      });
-      updatePerks();
-      updatePrice();
-    }
-    function updatePerks() {
-      const service = serviceEl.value;
-      const perks = perksMap[service] || [];
-      if (perks.length > 0) {
-        perkDisplay.innerHTML = "<strong>What do you get:</strong><ul>" + 
-          perks.map(p => `<li>${p}</li>`).join("") + "</ul>";
-      } else {
-        perkDisplay.innerHTML = "";
-      }
-    }
-    function updatePrice() {
-      const service = serviceEl.value;
-      const duration = durationEl.value;
-      const price = priceMap[service]?.[duration];
-      if (price !== undefined) {
-        const usd = (price / 15.42).toFixed(2);
-        priceDisplay.textContent = `MVR ${price} ($${usd})`;
-      } else {
-        priceDisplay.textContent = "Unavailable";
-      }
-    }
-    serviceEl.onchange = updateDurationOptions;
-    durationEl.onchange = () => {
-      updatePerks();
-      updatePrice();
-    };
     document.getElementById("startBtn").onclick = () => {
       document.getElementById("landing").style.display = "none";
       document.getElementById("howItWorks").style.display = "block";
     };
+
     document.getElementById("formBtn").onclick = () => {
       document.getElementById("howItWorks").style.display = "none";
       document.getElementById("formCard").style.display = "block";
-    };
-    window.onload = updateDurationOptions;
-    document.getElementById("customerForm").onsubmit = function (e) {
-      e.preventDefault();
-      const data = Object.fromEntries(new FormData(this).entries());
-      fetch("https://script.google.com/macros/s/AKfycbwFlP2Z7qeFH0X3smevW5XGODvskl0CibYGissxfbigEy09OwBCjjchiGRU33vp8fZ9tA/exec", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(data)
-      }).then(res => res.json()).then(result => {
-        alert("✅ Request submitted! Check your email for payment instructions.
-📞 Contact us at 7566658");
-        e.target.reset();
-        updateDurationOptions();
-      }).catch(err => {
-        alert("❌ Something went wrong. Please try again.");
-      });
     };
   </script>
 </body>
