--- a/index.html
+++ b/index.html
@@ -293,29 +293,49 @@
 
     window.onload = updateDurationOptions;
 
-    document.getElementById("customerForm").onsubmit = async function(e) {
-      e.preventDefault();
-      const data = Object.fromEntries(new FormData(this).entries());
-
-      try {
-        const response = await fetch("https://script.google.com/macros/s/AKfycbwFlP2Z7qeFH0X3smevW5XGODvskl0CibYGissxfbigEy09OwBCjjchiGRU33vp8fZ9tA/exec", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(data)
-        });
-
-        const result = await response.json();
-        if (result.status === "success") {
-          alert("✅ Request submitted! Please check your email for payment instructions.");
-          this.reset();
-          updateDurationOptions();
-        } else {
-          alert("❌ Something went wrong. Try again later.");
-        }
-      } catch (err) {
-        alert("❌ Error connecting to server. Please check your network or try again.");
-      }
-    };
+document.getElementById("customerForm").onsubmit = function(e) {
+  e.preventDefault();
+  const formData = new FormData(this);
+  const data = Object.fromEntries(formData.entries());
+  
+  // Create a callback function name
+  const callbackName = 'jsonpCallback_' + Date.now();
+  
+  // Define callback function in global scope
+  window[callbackName] = function(response) {
+    if (response.status === "success") {
+      alert("✅ Request submitted! Please check your email for payment instructions.");
+      document.getElementById("customerForm").reset();
+      updateDurationOptions();
+    } else {
+      alert("❌ Something went wrong. Try again later.");
+    }
+    // Clean up
+    document.body.removeChild(script);
+    delete window[callbackName];
+  };
+  
+  // Create script element
+  const script = document.createElement('script');
+  const scriptUrl = 'https://script.google.com/macros/s/AKfycbwFlP2Z7qeFH0X3smevW5XGODvskl0CibYGissxfbigEy09OwBCjjchiGRU33vp8fZ9tA/exec';
+  
+  // Add data as query parameters
+  const params = new URLSearchParams();
+  for (const [key, value] of Object.entries(data)) {
+    params.append(key, value);
+  }
+  params.append('callback', callbackName);
+  
+  script.src = `${scriptUrl}?${params.toString()}`;
+  document.body.appendChild(script);
+  
+  // Handle errors
+  script.onerror = function() {
+    alert("❌ Error connecting to server. Please check your network or try again.");
+    document.body.removeChild(script);
+    delete window[callbackName];
+  };
+};
   </script>
 </body>
 </html>
