--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,28 +12,18 @@
       margin: 0;
       padding: 0;
     }
-
     .container {
       max-width: 500px;
       margin: 0 auto;
       padding: 20px;
     }
-
     .centered {
       text-align: center;
       padding: 60px 20px 30px;
       animation: fadeIn 1s ease;
     }
-
-    h1 {
-      font-size: 1.8em;
-      margin-bottom: 10px;
-    }
-
-    p {
-      font-size: 1.1em;
-    }
-
+    h1 { font-size: 1.8em; margin-bottom: 10px; }
+    p { font-size: 1.1em; }
     button {
       padding: 12px 24px;
       background-color: #e84545;
@@ -45,11 +34,7 @@
       font-size: 16px;
       cursor: pointer;
     }
-
-    button:hover {
-      background-color: #cc3c3c;
-    }
-
+    button:hover { background-color: #cc3c3c; }
     .card {
       background: #fff;
       color: #333;
@@ -60,13 +45,11 @@
       display: none;
       animation: fadeIn 0.5s ease-in-out;
     }
-
     label {
       font-weight: bold;
       margin-top: 12px;
       display: block;
     }
-
     input, select, textarea {
       width: 100%;
       padding: 10px;
@@ -77,12 +60,10 @@
       box-sizing: border-box;
       font-size: 15px;
     }
-
     .perk-section {
       font-size: 0.95em;
       margin: 10px 0 20px;
     }
-
     .sticky-price {
       background-color: #0d1a26;
       color: white;
@@ -92,13 +73,11 @@
       font-weight: bold;
       font-size: 18px;
     }
-
     .sticky-price span {
       display: block;
       font-size: 26px;
       margin-top: 5px;
     }
-
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
@@ -128,214 +107,60 @@
       <form id="customerForm">
         <label>Full Name</label>
         <input type="text" name="name" required />
-
         <label>Email Address</label>
         <input type="email" name="email" required />
-
         <label>Request Type</label>
         <select name="requestType" required>
           <option value="new">New Subscription</option>
           <option value="renew">Renew Existing</option>
         </select>
-
         <label>Service</label>
         <select name="service" id="service" required>
           <option value="ChatGPT">ChatGPT Pro</option>
-          <option value="Microsoft 365">Microsoft 365</option>
-          <option value="Canva Pro">Canva Pro</option>
-          <option value="Duolingo">Duolingo</option>
-          <option value="Assignment Check">Assignment Check</option>
-          <option value="Perplexity">Perplexity Pro</option>
-          <option value="Amazon Prime Video">Amazon Prime Video</option>
-          <option value="Adobe Creative Cloud">Adobe Creative Cloud</option>
         </select>
-
         <label>Duration</label>
-        <select name="duration" id="duration" required></select>
-
-        <div class="perk-section" id="perkDisplay"></div>
-
+        <select name="duration" id="duration" required>
+          <option value="1 Month">1 Month</option>
+        </select>
+        <div class="perk-section" id="perkDisplay">
+          <strong>What do you get:</strong><ul><li>Priority access to GPT-4</li><li>Faster response times</li><li>Improved performance during peak hours</li></ul>
+        </div>
         <label>Notes / Ref</label>
         <textarea name="notes" rows="3" placeholder="Optional..."></textarea>
-
-        <div class="sticky-price" id="priceDisplay">
-          🛒 Total Price
-          <span>MVR 0 ($0.00)</span>
-        </div>
-
+        <div class="sticky-price" id="priceDisplay">🛒 Total Price <span>MVR 100 ($6.49)</span></div>
         <button type="submit">Submit</button>
       </form>
     </div>
   </div>
-
   <script>
     function showHowItWorks() {
       document.getElementById('landing').style.display = 'none';
       document.getElementById('howItWorks').style.display = 'block';
     }
-
     function showForm() {
       document.getElementById('howItWorks').style.display = 'none';
       document.getElementById('formCard').style.display = 'block';
     }
-
-    const priceMap = {
-      "ChatGPT": { "1 Month": 100, "6 Months": 600, "1 Year": 1200 },
-      "Microsoft 365": { "1 Year": 500 },
-      "Canva Pro": { "1 Year": 150 },
-      "Duolingo": { "1 Year": 150 },
-      "Assignment Check": { "1 Assignment": 150, "1 Month Unlimited": 500 },
-      "Perplexity": { "1 Year": 200 },
-      "Amazon Prime Video": { "1 Year": 999 },
-      "Adobe Creative Cloud": { "1 Month": 450 }
-    };
-
-    const durationOptions = {
-      "ChatGPT": ["1 Month", "6 Months", "1 Year"],
-      "Microsoft 365": ["1 Year"],
-      "Canva Pro": ["1 Year"],
-      "Duolingo": ["1 Year"],
-      "Assignment Check": ["1 Assignment", "1 Month Unlimited"],
-      "Perplexity": ["1 Year"],
-      "Amazon Prime Video": ["1 Year"],
-      "Adobe Creative Cloud": ["1 Month"]
-    };
-
-    const perksMap = {
-      "ChatGPT": [
-        "Priority access to GPT-4",
-        "Faster response times",
-        "Improved performance during peak hours"
-      ],
-      "Microsoft 365": [
-        "Access to Word, Excel, PowerPoint",
-        "1TB OneDrive Cloud Storage",
-        "Install on 5 devices"
-      ],
-      "Canva Pro": [
-        "Unlimited premium templates & elements",
-        "Magic Resize, Background Remover",
-        "Brand Kit and content planner"
-      ],
-      "Duolingo": [
-        "Ad-free experience",
-        "Unlimited hearts (mistakes)",
-        "Offline access"
-      ],
-      "Assignment Check": [
-        "AI detection report (Turnitin, GPTZero, etc.)",
-        "No repository saving",
-        "Fast 1–2 hr report"
-      ],
-      "Perplexity": [
-        "Faster and accurate answers",
-        "Cited responses",
-        "No usage limits"
-      ],
-      "Amazon Prime Video": [
-        "Exclusive Prime Originals",
-        "Offline downloads",
-        "Watch on multiple devices"
-      ],
-      "Adobe Creative Cloud": [
-        "Access to Photoshop, Illustrator & more",
-        "100GB Cloud storage",
-        "Creative asset library"
-      ]
-    };
-
-    const serviceEl = document.getElementById("service");
-    const durationEl = document.getElementById("duration");
-    const priceDisplay = document.getElementById("priceDisplay").querySelector("span");
-    const perkDisplay = document.getElementById("perkDisplay");
-
-    function updateDurationOptions() {
-      const service = serviceEl.value;
-      durationEl.innerHTML = "";
-      (durationOptions[service] || []).forEach(opt => {
-        const o = document.createElement("option");
-        o.value = opt;
-        o.textContent = opt;
-        durationEl.appendChild(o);
-      });
-      updatePerks();
-      updatePrice();
-    }
-
-    function updatePerks() {
-      const service = serviceEl.value;
-      const perks = perksMap[service] || [];
-      if (perks.length > 0) {
-        perkDisplay.innerHTML = "<strong>What do you get:</strong><ul>" + 
-          perks.map(p => `<li>${p}</li>`).join("") + "</ul>";
-      } else {
-        perkDisplay.innerHTML = "";
+    document.getElementById("customerForm").onsubmit = async function (e) {
+      e.preventDefault();
+      const data = Object.fromEntries(new FormData(this).entries());
+      try {
+        const response = await fetch("https://script.google.com/macros/s/AKfycbwFlP2Z7qeFH0X3smevW5XGODvskl0CibYGissxfbigEy09OwBCjjchiGRU33vp8fZ9tA/exec", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(data),
+        });
+        const result = await response.json();
+        if (result.status === "success") {
+          alert("✅ Request submitted! Please check your email for payment instructions.");
+          this.reset();
+        } else {
+          alert("❌ Submission failed.");
+        }
+      } catch (err) {
+        alert("❌ Connection error: Please try again later.");
       }
-    }
-
-    function updatePrice() {
-      const service = serviceEl.value;
-      const duration = durationEl.value;
-      const price = priceMap[service]?.[duration];
-      if (price !== undefined) {
-        const usd = (price / 15.42).toFixed(2);
-        priceDisplay.textContent = `MVR ${price} ($${usd})`;
-      } else {
-        priceDisplay.textContent = "Unavailable";
-      }
-    }
-
-    serviceEl.onchange = updateDurationOptions;
-    durationEl.onchange = () => {
-      updatePerks();
-      updatePrice();
     };
-
-    window.onload = updateDurationOptions;
-
-document.getElementById("customerForm").onsubmit = function(e) {
-  e.preventDefault();
-  const formData = new FormData(this);
-  const data = Object.fromEntries(formData.entries());
-  
-  // Create a callback function name
-  const callbackName = 'jsonpCallback_' + Date.now();
-  
-  // Define callback function in global scope
-  window[callbackName] = function(response) {
-    if (response.status === "success") {
-      alert("✅ Request submitted! Please check your email for payment instructions.");
-      document.getElementById("customerForm").reset();
-      updateDurationOptions();
-    } else {
-      alert("❌ Something went wrong. Try again later.");
-    }
-    // Clean up
-    document.body.removeChild(script);
-    delete window[callbackName];
-  };
-  
-  // Create script element
-  const script = document.createElement('script');
-  const scriptUrl = 'https://script.google.com/macros/s/AKfycbwFlP2Z7qeFH0X3smevW5XGODvskl0CibYGissxfbigEy09OwBCjjchiGRU33vp8fZ9tA/exec';
-  
-  // Add data as query parameters
-  const params = new URLSearchParams();
-  for (const [key, value] of Object.entries(data)) {
-    params.append(key, value);
-  }
-  params.append('callback', callbackName);
-  
-  script.src = `${scriptUrl}?${params.toString()}`;
-  document.body.appendChild(script);
-  
-  // Handle errors
-  script.onerror = function() {
-    alert("❌ Error connecting to server. Please check your network or try again.");
-    document.body.removeChild(script);
-    delete window[callbackName];
-  };
-};
   </script>
 </body>
 </html>
